fix: ios safari vertical align bug

--- a/static/style/style.css
+++ b/static/style/style.css
@@ -732,6 +732,7 @@
     font-size: 12px;
     color: #fff;
     text-decoration: none;
+    display: inline-block;
   }
   #bottom-right a:hover {
     opacity: 1;
